# kavigupta.github.com

./: .gitignore  .gitmodules  404.html  CNAME  _config.yml  _config.yml~  about.md  about.md~  archive.md  blog.md  index.html  index.md  redirect_links.py  styles.scss
.otherposts/: 2015-10-08-Ancient-Greek-Abstract-Algebra-Axioms.md  2015-12-31-The-Mathematics-Of-Counting-Cards.md  2016-01-07-Linear-Algebra-Cleanup.md  2016-04-22-x=x+1.md  2016-05-09-Dictp-Part-3-Implementation.md  2016-05-11-A-Differential-Approach-To-Erosion.md  2016-05-16-Permuting-the-Naturals.md  2016-06-08-Visualizing-A-Force-Field.md  2016-07-29-Introducing-the-Circle-Tree-System.md  2017-06-16-Logical-Games.md
.otherposts/2016-06-24/: Examples.hs  OnErrorResumeNext.hs  on-error-resume-next.cabal
_includes/: aboutarchive.html  comments.html  google_analytics.html  head.html  head.html~
_layouts/: default.html  default.html~  page.html  page.html~  post.html  post.html~
_posts-raw/: 2015-11-23-Recursivized-Types.md  2015-11-24-What's-A-Number.md
_posts.bak/: 2015-10-06-Ancient-Greek-Abstract-Algebra-Introduction.md  2015-11-19-Who-Needs-Delta.md  2015-11-23-Recursivized-Types.md  2015-11-24-What's-A-Number.md  2015-12-06-Infsabot-Strategy.md  2015-12-10-Infsabot-Strategy-Part-2.md  2015-12-21-Dictp.md  2015-12-30-Dictp-Part-2.md  2015-12-31-Stupid-Regex-Tricks.md  2016-01-28-What-Is-Category-Theory.md  2016-02-16-Monadic-Set-Theory-1.md  2016-02-16-Monadic-Set-Theory-2.md  2016-04-17-The-Triviality-Norm.md  2016-04-21-C-Style-Pointer-Syntax-Considered-Harmful.md  (+23 more)
_sass/: _base.scss  (+5 more)
(+274 files in other folders)
