
name:                on-error-resume-next
version:             0.1.0.0
synopsis:            An implementation of VB's On Error Resume Next for Haskell
-- description:
homepage:            kavigupta.github.io
license:             GPL-3
license-file:        LICENSE
author:              Kavi Gupta
maintainer:          kavi@globalmbox.com
-- copyright:
category:            Control
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules: OnErrorResumeNext
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  -- hs-source-dirs:
  default-language:    Haskell2010